[gd_scene load_steps=3 format=3 uid="uid://c3npsqeepojxr"]

[ext_resource type="Script" path="res://Scripts/options.gd" id="1_b6u4m"]
[ext_resource type="Texture2D" uid="uid://rtfa88uouejn" path="res://Assets/game_project_tutorial_image.webp" id="2_cufvl"]

[node name="Options" type="Node2D"]
script = ExtResource("1_b6u4m")

[node name="VBoxContainer" type="VBoxContainer" parent="."]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = 479.0
offset_top = 186.0
offset_right = 676.0
offset_bottom = 424.0
grow_horizontal = 2
grow_vertical = 2

[node name="Sound" type="Button" parent="VBoxContainer"]
layout_mode = 2
toggle_mode = true
text = "Sound
"

[node name="Controls" type="Button" parent="VBoxContainer"]
layout_mode = 2
text = "Controls"

[node name="Back" type="Button" parent="VBoxContainer"]
layout_mode = 2
text = "Back to Main Menu
"

[node name="Description" type="Sprite2D" parent="VBoxContainer"]
visible = false
position = Vector2(88, 55)
scale = Vector2(0.6, 0.6)
texture = ExtResource("2_cufvl")

[node name="Button" type="Button" parent="."]
visible = false
offset_left = 900.0
offset_top = 140.0
offset_right = 929.0
offset_bottom = 175.0
text = "X"

[connection signal="pressed" from="VBoxContainer/Sound" to="." method="_on_sound_pressed"]
[connection signal="pressed" from="VBoxContainer/Controls" to="." method="_on_controls_pressed"]
[connection signal="pressed" from="VBoxContainer/Back" to="." method="_on_back_pressed"]
[connection signal="pressed" from="Button" to="." method="_on_button_pressed"]
